<resources>
    <string name="app_name">Smart Learning</string>

    <!-- Welcome Screen -->
    <string name="welcome_next_button">Next</string>
    <string name="welcome_get_started_button">Get Started</string>
    <string name="welcome_skip_button">Skip</string>

    <string name="title1">Enroll courses</string>
    <string name="description1">Enroll courses and never miss any updates from your teachers</string>
    <string name="title2">Do quizzes and Download materials</string>
    <string name="description2">Do quizzes, celebrate your success, and download the courses materials</string>
    <string name="title3">Chat</string>
    <string name="description3">Chat with other learners and your teachers</string>

    <!-- Login Activity -->
    <string name="login_under_app_name_intro">Easy and Smart Learning, Welcome!</string>
    <string name="login_email_edit_text_hint">E-mail</string>
    <string name="login_password_edit_text_hint">Password</string>
    <string name="login_login_button">Login</string>
    <string name="don_t_have_an_account">Do not have an account? </string>
    <string name="login_create_account">Create Account</string>

    <!-- Sign Up Activity -->
    <string name="sign_up_under_app_name_intro">Sign Up Here!</string>
    <string name="sign_up_choose_profile_image">Choose your profile image</string>
    <string name="sign_up_user_name_edit_text_hint">User Name</string>
    <string name="sign_up_email_edit_text_hint">E-mail</string>
    <string name="sign_up_password_edit_text_hint">Password</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="sign_up_teacher_radio_button">Teacher</string>
    <string name="sign_up_student_radio_button">Student</string>
    <string name="sign_up_sign_up_button">Sign Up</string>

    <string name="auth_user_name_empty_toast">User Name Can\'t be empty</string>
    <string name="auth_email_empty_toast">Email Can\'t be empty</string>
    <string name="auth_password_empty_toast">Password Can\'t be empty</string>
    <string name="auth_type_not_chosen_text_toast">Please, choose your account type</string>
    <string name="sign_up_choose_another_user_name_toast">Choose a different user name</string>

    <!-- Main Fragment Menu -->
    <string name="sign_out_menu">Sign Out</string>
    <string name="profile_menu">My Profile</string>
    <string name="notification_menu">Notification</string>

    <!-- Course Dialog -->
    <string name="course_dialog_add_new_course">Add New Course</string>
    <string name="course_dialog_name_edit_text_hint">Enter Course Name</string>
    <string name="course_dialog_year_text_view">Select course year</string>
    <string name="course_dialog_save_button">Save</string>
    <string name="course_dialog_cancel_button">Cancel</string>

    <!-- Courses Activity -->
    <string name="no_of_students">No of students: </string>
    <string name="year">Year: </string>
    <string name="teacher_name">Teacher Name: </string>

    <!-- Course Activity -->
    <string name="course_quizzes">Quizzes</string>
    <string name="course_add_student">Add student</string>
    <string name="course_materials">Materials</string>
    <string name="course_chat">Chat</string>
    <string name="course_private_chat">Private chat</string>

    <string name="action_delete">Delete</string>
    <string name="action_students">Students</string>
    <string name="action_course_details">Course details</string>

    <!-- Course Details Dialog -->
    <string name="course_details_head">Course Details </string>
    <string name="course_details_course_name">Course Name: </string>
    <string name="course_details_teacher_name">Teacher Name: </string>
    <string name="course_details_year">Year: </string>
    <string name="course_details_number_of_students">Number of students: </string>

    <!-- Quiz Activity -->
    <string name="quiz_activity_quiz_number">Quiz Number : </string>
    <string name="quiz_name_edit_text_empty">Please, Write the quiz name</string>
    <!-- Quiz Adapter For Student -->
    <string name="quiz_solved">Solved</string>
    <string name="quiz_not_solved">Not Solved</string>
    <!-- Quiz Answer -->
    <string name="quiz_next_question_button">Next Question</string>
    <!-- Quiz Details Activity -->
    <string name="quiz_details_modify_quiz_button">Modify quiz</string>
    <string name="quiz_modify_add_question_button">Add Question</string>
    <string name="quiz_details_students_degrees">Degrees of students who solved the quiz</string>

    <!-- Add Quiz Dialog -->
    <string name="add_quiz_dialog_title">Add Quiz</string>
    <string name="add_quiz_dialog_edit_text_hint">Quiz Name</string>
    <string name="add_quiz_dialog_negative_button">Cancel</string>
    <string name="add_quiz_dialog_positive_button">Add</string>
    <!-- Confirm Discard Dialog -->
    <string name="discard_message">Discard changes?</string>
    <string name="discard_yes">Discard</string>
    <string name="discard_no">Cancel</string>
    <!-- Answer Confirm Discard Dialog -->
    <string name="discard_message_in_answer">All answers will be lost, Are you sure you want to exit?</string>
    <string name="discard_yes_in_answer">Exit</string>
    <string name="discard_no_in_answer">Cancel</string>

    <!-- Add Quiz Activity -->
    <string name="add_quiz_question_number_text_view">Question number: </string>
    <string name="add_quiz_question_hint">Enter Question</string>
    <string name="add_quiz_option_1_hint">First Answer</string>
    <string name="add_quiz_option_2_hint">Second Answer</string>
    <string name="add_quiz_option_3_hint">Third Answer</string>
    <string name="add_quiz_option_4_hint">Fourth Answer</string>
    <string name="add_quiz_add_another_question_button">Add another question</string>
    <string name="add_quiz_modify_question_button">Modify question</string>
    <string name="add_quiz_finish_button">Finish</string>
    <string name="add_quiz_right_answer">Choose the right answer</string>
    <string name="of">of</string>

    <string name="add_quiz_empty_fields_toast">Please, fill all fields</string>
    <string name="add_quiz_empty_questions_toast">Please, add at least one question</string>

    <!-- Materials Activity -->
    <string name="the_file_is_already_exist_toast">The file is already exists</string>
    <string name="there_is_no_app_to_read_pdf">There is no app to read pdf files</string>
    <string name="downloaded_toast">Downloaded to Downloads</string>
    <string name="snack_bar_button">Open</string>

    <!-- Chat Activity -->
    <string name="input_edit_text_hint">Type a message</string>

    <!-- Profile Activity -->
    <string name="account_type_teacher">Teacher Account</string>
    <string name="account_type_student">Student Account</string>
    
    <!-- Dialogs -->
    <string name="course_delete_dialog_msg">Are you sure you want to delete this course ?</string>
    <string name="course_delete_dialog_delete">Delete</string>
    <string name="course_delete_dialog_cancel">Cancel</string>
    <string name="material_delete_dialog_msg">Are you sure you want to delete this material ?</string>
    <string name="material_delete_dialog_delete">Delete</string>
    <string name="material_delete_dialog_cancel">Cancel</string>
    <string name="quiz_delete_dialog_msg">Are you sure you want to delete this quiz ?</string>
    <string name="quiz_delete_dialog_delete">Delete</string>
    <string name="quiz_delete_dialog_cancel">Cancel</string>

    <!-- Screens Labels -->
    <string name="main_label">Smart Learning</string>
    <string name="courses_label">Courses</string>
    <string name="add_student_label">Add Student</string>
    <string name="quizzes_label">Quizzes</string>
    <string name="add_quiz_label">Add Quiz</string>
    <string name="answer_quiz_label">Answer Quiz</string>
    <string name="quiz_details_label">Quiz Details</string>
    <string name="quiz_statistics_label">Quiz Statistics</string>
    <string name="materials_label">Materials</string>
    <string name="notifications_label">Notifications</string>
    <string name="my_profile_label">My Profile</string>
    <string name="private_chat_label">Course Members</string>

    <!-- Content Descriptions -->
    <string name="add_fab_content_description">Add</string>
    <string name="delete_button_content_description">Delete</string>
    <string name="play_button_content_description">Play</string>
    <string name="download_button_content_description">Download</string>
    <string name="quiz_item_content_description">Quiz</string>
    <string name="add_student_item_content_description">Add Student</string>
    <string name="materials_item_content_description">Materials</string>
    <string name="group_chat_item_content_description">Chat</string>
    <string name="private_chat_item_content_description">Chat</string>
    <string name="quiz_solved_content_description">Solved or Not Image</string>
    <string name="back_button_content_description">Back</string>
    <string name="details_image_content_description">Details</string>
    <string name="quiz_finish_button_content_description">Finish</string>

    <string name="ok">OK</string>
</resources>