<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/quizzes_card"
            android:layout_width="match_parent"
            android:background="@color/list_item_color"
            android:layout_height="60dp">
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/quiz_item_content_description"
                android:src="@drawable/quiz" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:text="@string/course_quizzes"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_student_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/list_item_color" >

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/add_student_item_content_description"
                android:src="@drawable/add_student" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:text="@string/course_add_student"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/materials_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/list_item_color" >

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/materials_item_content_description"
                android:src="@drawable/material" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:text="@string/course_materials"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_chat_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/list_item_color" >

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/group_chat_item_content_description"
                android:src="@drawable/group_chat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/course_chat"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/private_chat_card"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/list_item_color" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/private_chat_item_content_description"
                android:src="@drawable/private_chat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:text="@string/course_private_chat"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </RelativeLayout>
    </LinearLayout>
</layout>