<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mahmoudhamdyae.smartlearning.ui.course.quiz.addquiz.AddQuizViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_quiz_question_number_text_view"
            app:layout_constraintEnd_toStartOf="@id/question_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_number"
            style="@style/MainTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1" />

        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_number"
            android:hint="@string/add_quiz_question_hint"
            android:text="@={viewModel.question}"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/question_number" />

        <EditText
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:hint="@string/add_quiz_option_1_hint"
            android:text="@={viewModel.answer1}"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/question" />

        <EditText
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.answer2}"
            android:layout_below="@+id/option1"
            android:hint="@string/add_quiz_option_2_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/option1" />

        <EditText
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.answer3}"
            android:layout_below="@+id/option2"
            android:hint="@string/add_quiz_option_3_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/option2" />

        <EditText
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option3"
            android:hint="@string/add_quiz_option_4_hint"
            android:text="@={viewModel.answer4}"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/option3" />

        <TextView
            android:id="@+id/right_answer_label"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/option4"
            android:text="@string/add_quiz_right_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option4" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/right_answer_label"
            app:layout_constraintTop_toBottomOf="@id/right_answer_label">

            <RadioButton
                android:id="@+id/option1_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_quiz_option_1_hint" />

            <RadioButton
                android:id="@+id/option2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_quiz_option_2_hint" />

            <RadioButton
                android:id="@+id/option3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_quiz_option_3_hint" />

            <RadioButton
                android:id="@+id/option4_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_quiz_option_4_hint" />
        </RadioGroup>

        <Button
            android:id="@+id/add_another_question_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quiz_add_another_question_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quiz_finish_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>