<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mahmoudhamdyae.smartlearning.ui.auth.LogInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fragments_margin"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/toolbar_margin"
                android:contentDescription="@string/back_button_content_description"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/app_name"
                android:textColor="@color/text_primary_color"
                android:textSize="@dimen/smart_learning_label_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_under_app_name_intro"
                android:textColor="@color/text_secondary_color"
                android:textSize="@dimen/text_secondary_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_text" />

            <TextView
                android:id="@+id/choose_profile_picture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_label_margin"
                android:gravity="center"
                android:text="@string/sign_up_choose_profile_image"
                android:textColor="@color/auth_red"
                android:textSize="@dimen/text_secondary_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sub_text" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/profile_picture_width"
                android:layout_height="@dimen/profile_picture_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/profile_picture_margin"
                android:src="@drawable/default_image"
                app:layout_constraintStart_toEndOf="@id/choose_profile_picture_text"
                app:layout_constraintTop_toBottomOf="@id/sub_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_picture_margin"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"
                    android:hint="@string/sign_up_user_name_edit_text_hint"
                    android:inputType="textPersonName"
                    android:padding="@dimen/edit_text_padding"
                    android:text="@={viewModel.userName}"
                    android:textColor="@color/text_primary_color"
                    android:textColorHint="@color/text_primary_color"
                    android:textSize="@dimen/edit_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"
                    android:hint="@string/sign_up_email_edit_text_hint"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edit_text_padding"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/text_primary_color"
                    android:textSize="@dimen/edit_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"
                    android:hint="@string/sign_up_password_edit_text_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/text_primary_color"
                    android:textColorHint="@color/text_primary_color"
                    android:textSize="@dimen/edit_text_size"
                    app:errorEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/select_account_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/select_account_type"
                android:textColor="@color/auth_red"
                android:textSize="@dimen/text_secondary_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_account_type_text">

                <RadioButton
                    android:id="@+id/teacher_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up_teacher_radio_button"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/student_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up_student_radio_button"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </RadioGroup>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/button_background"
                android:text="@string/sign_up_sign_up_button"
                android:textColor="@color/button_text"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibilityOfLoading="@{viewModel.status}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>